--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,14 @@
      </dependency>
 
  </dependencies>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
+    </plugins>
+</build>
 
  <properties>
   <java.version>17</java.version>
